1103 fix line view bugs (#1184)
* Disabled & highlighted copy button background fix

* LineHeader creation: default date set as today if lastLineHeader is not found

* Fixed lineView CSS to work in firefox (double scrollbar bug solved)

* small refactor

--- a/src/components/sidebar/lineView/lineView.scss
+++ b/src/components/sidebar/lineView/lineView.scss
@@ -12,12 +12,4 @@
     &.loaderContainer > div {
         margin: 30px auto;
     }
-
-    .content {
-        overflow-y: auto;
-        flex-grow: 1;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-    }
 }
